--- a/content/services.html
+++ b/content/services.html
@@ -4,4 +4,36 @@ tags:
   - sa-cdc
 ---
 
-Hi, I'm a conflicted page with seek care.  On this page you should be able to donate and stuff.
+<!DOCTYPE html>
+<html>
+<body>
+
+<h3>Get Involved by Making a Donation or Volunteering</h3><br>
+
+<p>As a nonprofit dental health provider, we rely heavily on individual monetary donations and the hard work of volunteers.</p>
+
+<p>If you would like to make a monetary donation, please contact us via telephone at (210) 220-2300 or email at <a href="mailto:bigemf5@gmail.com?Subject=Schedule%20a%20Visit" target="_top">bigemf5@gmail.com.</a>.  Or, you can click on the link below to make a donation online.  Your contributions are always appreciated!</p>
+
+PLACEHOLDER FOR DONATE NOW BUTTON<br>
+
+<p>If you would like to donate your time as a volunteer, there are several ways you can apply or get more information.  We are in constant need of Dentists and Dental Hygienists.  If you have another skill that may be useful to what we are doing, please don’t hesitate to let us know!  To volunteer or request more information you can:</p>
+
+<ol>
+  <li>Complete the application form below.  Once complete, you can email it, mail it, or bring it into our office.</li>
+  <li>Give us a call at (210) 220-2301.</li>
+  <li>Email us at <a href="mailto:bigemf5@gmail.com?Subject=Schedule%20a%20Visit" target="_top">bigemf5@gmail.com</a> or via the information request form below.</li>
+  <li>Come by our office at the address in the footer of this page.</li>
+</ol>
+
+PLACEHOLDER FOR WEBFORM<br>
+
+<p>Stay connected!  If you would like to receive our periodic newsletters, click the button below to sign up.</p>
+
+PLACEHOLDER FOR NEWSLETTER (EMMA)
+
+<p>You'll find some of our recent newsletters below.</p>
+
+PLACEHOLDER FOR RECENT NEWSLETTER DOCS
+
+</body>
+</html>
