--- a/content/index.html
+++ b/content/index.html
@@ -19,21 +19,21 @@ tags:
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="/static/imgs/IMG_1978.JPG" alt="A">
+      <img src="/imgs/IMG_1978.JPG" alt="A">
       <div class="carousel-caption">
         <h3>Giving Dignity, Giving Hope</h3>
         SACDC provides $3 million dollars in free dental care to over 9,000 patients each year.
       </div>
     </div>
     <div class="item">
-      <img src="/static/imgs/IMG_1888.JPG" alt="B">
+      <img src="/imgs/IMG_1888.JPG" alt="B">
       <div class="carousel-caption">
         <h3>Welcome to SACDC</h3>
         Since 1986- making a difference in the dental health of those in need
       </div>
     </div>
     <div class="item">
-      <img src="/static/imgs/haven-for-hope-2.jpg" alt="C">
+      <img src="/imgs/haven-for-hope-2.jpg" alt="C">
       <div class="carousel-caption">
         <h3>Haven for Hope</h3>
         Located on the transformational Haven for Hope campus, SACDC seeks to provide health, hope, and healing to those who need it the most.
