Fixed doc links

--- a/content/sched_vst.html
+++ b/content/sched_vst.html
@@ -4,10 +4,6 @@ tags:
   - none
 ---
 
-<!DOCTYPE html>
-<html>
-<body>
-
 <h3>Schedule a Visit with Us</h3><br>
 
 <p>Important:  You must bring a photo ID with you when you visit our clinic for services.</p>
@@ -36,10 +32,7 @@ PLACEHOLDER FOR APPLICATION FORM<br>
 <p>Before visiting, we ask that you please read and understand our Patient Handout and Clinic Rules.  If you cannot access these documents online, we can make them available to you here at the clinic.</p>
 
 <ul class="list-inline">
-  <li><a href="/docs/Applicant_Handout_Spanish.pdf"><img src="/imgs/pdf_thumbnail.jpg" alt="PDF 1" width="42" height="42"></a> Applicant Handout (English)</li>
-  <li><a href="/docs/Applicant_Handout_Spanish.pdf"><img src="/imgs/pdf_thumbnail.jpg" alt="PDF 1" width="42" height="42"></a> Applicant Handout (Spanish)</li>
-  <li><a href="/docs/Clinic_Rules_2014.pdf"><img src="/imgs/pdf_thumbnail.jpg" alt="PDF 1" width="42" height="42"></a> Clinic Rules</li>
+  <li><a href="/static/docs/Applicant_Handout_Spanish.pdf"><img src="/static/imgs/pdf_thumbnail.jpg" alt="PDF 1" width="42" height="42"></a> Applicant Handout (English)</li>
+  <li><a href="/static/docs/Applicant_Handout_Spanish.pdf"><img src="/static/imgs/pdf_thumbnail.jpg" alt="PDF 1" width="42" height="42"></a> Applicant Handout (Spanish)</li>
+  <li><a href="/static/docs/Clinic_Rules_2014.pdf"><img src="/static/imgs/pdf_thumbnail.jpg" alt="PDF 1" width="42" height="42"></a> Clinic Rules</li>
 </ul>
-
-</body>
-</html>
