--- a/content/downloads.html
+++ b/content/downloads.html
@@ -4,17 +4,27 @@ tags:
   - none
 ---
 
-<!DOCTYPE html>
-<html>
-<body>
+<h3>Forms, documents, and other information for download:</h3>
 
-<h3>Forms, documents, and other information for download:</h3><br>
+<br>
 
 <ul class="list-inline">
-  <li><a href="/docs/Applicant_Handout_Spanish.pdf"><img src="/imgs/pdf_thumbnail.jpg" alt="PDF 1" width="42" height="42"></a> Applicant Handout (English)</li>
-  <li><a href="/docs/Applicant_Handout_Spanish.pdf"><img src="/imgs/pdf_thumbnail.jpg" alt="PDF 1" width="42" height="42"></a> Applicant Handout (Spanish)</li>
-  <li><a href="/docs/Clinic_Rules_2014.pdf"><img src="/imgs/pdf_thumbnail.jpg" alt="PDF 1" width="42" height="42"></a> Clinic Rules</li>
+  <li>
+    <a href="/static/docs/Applicant_Handout_English.pdf">
+      <img src="/static/imgs/pdf_thumbnail.jpg" alt="PDF 1" width="42" height="42">
+    </a>
+    Applicant Handout (English)
+  </li>
+  <li>
+    <a href="/static/docs/Applicant_Handout_Spanish.pdf">
+      <img src="/static/imgs/pdf_thumbnail.jpg" alt="PDF 1" width="42" height="42">
+    </a>
+    Applicant Handout (Spanish)
+  </li>
+  <li>
+    <a href="/static/docs/Clinic_Rules_2014.pdf">
+      <img src="/static/imgs/pdf_thumbnail.jpg" alt="PDF 1" width="42" height="42">
+    </a>
+    Clinic Rules
+  </li>
 </ul>
-
-</body>
-</html>
