Added Clinic Info page

--- a/content/sched_vst.html
+++ b/content/sched_vst.html
@@ -16,6 +16,9 @@ tags:
             San Antonio, TX 78207<br>
 	    Phone: (210)220-2300<br>
 	    Email: bigemf5@gmail.com<br><br>
+	    Clinic Hours<br>
+            Monday through Friday<br>
+ 	    8:30 a.m. to 3:30 p.m.<br><br><br>
 
 
 <p>There are several ways you can schedule a visit with us.</p>
