Added Annual Report pdf

--- a/content/clinic_info.html
+++ b/content/clinic_info.html
@@ -54,7 +54,7 @@ PLACEHOLDER FOR ANNUAL REPORTS
 
 <ul class="list-inline">
   <li>
-    <a href="#">
+    <a href="/static/docs/Annual_Report_2013.pdf">
       <img src="/static/imgs/pdf_thumbnail.jpg" alt="PDF 1" width="42" height="42">
     </a>
     2012-2013 Annual Report
