--- a/downloads.html
+++ b/downloads.html
@@ -9,7 +9,7 @@ tags:
 <br>
 
 <ul class="list-inline">
-  <% docs = @items['/downloads/'].children %>
+  <% docs = @items['/clinic_info/downloads/'].children %>
   <% docs.each do |doc| %>
     <li>
       <% path = doc.path %>
