Latest directory structure :), who knows...

--- a/content/clinic_info/downloads.html
+++ b/content/clinic_info/downloads.html
@@ -1,5 +1,6 @@
 ---
 title: Downloads
+group: clinic_info
 tags:
   - none
 ---
@@ -9,7 +10,7 @@ tags:
 <br>
 
 <ul class="list-inline">
-  <% docs = @items['/downloads/'].children %>
+  <% docs = @items['/clinic_info/downloads/'].children %>
   <% docs.each do |doc| %>
     <li>
       <% path = doc.path %>
