--- a/content/service/donations.html
+++ b/content/service/donations.html
@@ -1,8 +1,9 @@
 ---
 title: Donations
+group: service
 precedence: 1
 tags:
-  - sa-cdc
+  - service 
 ---
 
 Hi, I'm the Donations page, and will help you learn where your money goes when you dontate to San Antonio Christrian Dental. 
