Added thumbnails to schedule visit and clinic info pages.

--- a/content/clinic_info/index.html
+++ b/content/clinic_info/index.html
@@ -73,10 +73,11 @@ tags:
 
 <ul class="list-inline">
   <li>
-    <a href="/static/docs/Annual_Report_2013.pdf">
-      <img src="/static/imgs/pdf_thumbnail.jpg" alt="PDF 1" width="42" height="42">
-    </a>
-    2012-2013 Annual Report
+    <% report = @items['/clinic_info/downloads/Annual_Report_2013/'] %>
+      <a href="<%= report.path %>">
+        <img src="<%= report.path(:rep => :thumbnail) %>">
+        2012-2013 Annual Report
+      </a>
   </li>
 </ul>
 
