--- a/content/patients/sched_vst.html
+++ b/content/patients/sched_vst.html
@@ -33,7 +33,10 @@ tags:
 <p>Before visiting, we ask that you please read and understand our Patient Handout and Clinic Rules.  If you cannot access these documents online, we can make them available to you here at the clinic.</p>
 
 <ul class="list-inline">
-  <li><a href="/static/docs/Applicant_Handout_Spanish.pdf"><img src="/static/imgs/pdf_thumbnail.jpg" alt="PDF 1" width="42" height="42"></a> Applicant Handout (English)</li>
-  <li><a href="/static/docs/Applicant_Handout_Spanish.pdf"><img src="/static/imgs/pdf_thumbnail.jpg" alt="PDF 1" width="42" height="42"></a> Applicant Handout (Spanish)</li>
-  <li><a href="/static/docs/Clinic_Rules_2014.pdf"><img src="/static/imgs/pdf_thumbnail.jpg" alt="PDF 1" width="42" height="42"></a> Clinic Rules</li>
+  <% h = @items['/clinic_info/downloads/Applicant_Handout/'] %>
+  <li><a href="<%= h.path %>"><img src="<%= h.path(:rep => :thumbnail) %>"></a> Applicant Handout (English)</li>
+  <% h = @items['/clinic_info/downloads/Applicant_Handout_Spanish/'] %>
+  <li><a href="<%= h.path %>"><img src="<%= h.path(:rep => :thumbnail) %>"></a> Applicant Handout (Spanish)</li>
+  <% h = @items['/clinic_info/downloads/Clinic_Rules_2014/'] %>
+  <li><a href="<%= h.path %>"><img src="<%= h.path(:rep => :thumbnail) %>"></a> Clinic Rules</li>
 </ul>
