--- a/content/service/donations.html
+++ b/content/service/donations.html
@@ -6,4 +6,10 @@ tags:
   - service 
 ---
 
-Hi, I'm the Donations page, and will help you learn where your money goes when you dontate to San Antonio Christrian Dental. 
+<h3>Help our Mission by Making a Monetary Donation</h3><br>
+
+<p>As a nonprofit dental health provider, we rely heavily on individual monetary donations to provide services to those in need.</p>
+
+<p>If you would like to make a monetary donation, please contact us via telephone at (210) 220-2300 or email at <a href="mailto:#?Subject=Would%20Like%20to%20Make%20a%20Donation" target="_top">email@sabc.com.</a>.  Or, you can click on the link below to make a donation online.  Your contributions are always appreciated!</p>
+
+PLACEHOLDER FOR DONATE NOW BUTTON<br>
