Started messing with Jumbotron setup on Clinic Info page

--- a/content/clinic_info/index.html
+++ b/content/clinic_info/index.html
@@ -5,80 +5,79 @@ precedence: 1
 tags:
   - sa-cdc
 ---
-<h3><b><i>Since 1986--making a difference in the dental health of those in need</i></b></h3>
+    <div class="jumbotron">
+        <h1>San Antonio Christian Dental Clinic</h1>
+        <p class="lead"><i>Since 1986--making a difference in the dental health of those in need</i></p>
+      </div>
 
-<h3>Clinic Quick Facts</h3>
+      <div class="row marketing">
+        <div class="col-lg-6">
+          <h4>Clinic Quick Facts</h4>
+            <ul>
+  	      <li>Each year, San Antonio Christian Dental Clinic performs roughly 50,000 procedures, sees nearly 9,000 patients, and provides roughly $3.5 million dollars in free care</li>
+  	      <li>41% of all Bexar County Adults haven't seen a dentist over the past year</li>
+  	      <li>On average, roughly 4.5 million work days are missed each year in the United States because of chronic oral pain</li>
+	    </ul>
 
-<ul>
-  <li>Each year, San Antonio Christian Dental Clinic performs roughly 50,000 procedures, sees nearly 9,000 patients, and provides roughly $3.5 million dollars in free care</li>
-  <li>41% of all Bexar County Adults haven't seen a dentist over the past year</li>
-  <li>On average, roughly 4.5 million work days are missed each year in the United States because of chronic oral pain</li>
-</ul>
+          <h4>The need is great</h4>
+          <p>Access to dental care can be difficult or even impossible for those who do not have the financial resources to go to the dentist.  Minor dental problems become major if treatment is delayed.</p>
 
-<h3>The need is great</h3>
+          <h4>Why don't they receive care?</h4>
+          <p>Some are homeless, some are single mothers, others are unemployed, some work yet remain in poverty, others may be recovering from substance abuse, many are elderly or disabled.</p>
 
-<p>Access to dental care can be difficult or even impossible for those who do not have the financial resources to go to the dentist.  Minor dental problems become major if treatment is delayed.</p>
+	  <h4>Acute Need for the Elderly</h4>
+          <p>Hundreds of low-income elderly and disabled persons live below the poverty level in San Antonio and Bexar County, and most have no dental insurance.  Dental benefits are usually not available for seniors in Medicaid programs.</p>
 
-<h3>Why don't they receive care?</h3>
+	  <h4>Haven for Hope Partnership</h4>
+          <p>In addition to caring for our community's low-income residents, SACDC provides dental care for the Haven for Hope homeless residents.  The clinic, located at the Methodist Healthcare Ministries Healthcare Center at Haven for Hope, includes twelve dental treatment rooms and four oral surgery suites.  SACDC remains a separately incorporated non-profit corporation.</p>
 
-<p>Some are homeless, some are single mothers, others are unemployed, some work yet remain in poverty, others may be recovering from substance abuse, many are elderly or disabled.</p>
+	  <h4>UTHSCSA Dental School Collaboration</h4>
+	  <p>The University of Texas Health Science Center-SA Dental School 4th year dental students provide general dental care and Advanced Education in General Dentistry residents provide specialized treatment under the supervision of dental school faculty during a weekly rotation.</p>	
 
-<h3>Acute Need for the Elderly</h3>
-<p>Hundreds of low-income elderly and disabled persons live below the poverty level in San Antonio and Bexar County, and most have no dental insurance.  Dental benefits are usually not available for seniors in Medicaid programs.</p>
+        </div>
 
-<h3>SACDC Offers Access to Dental Care</h3>
-<p>The clinic provides a wide range of dental services for indigent and homeless persons in San Antonio and Bexar County.  SACDC is unique in the area as the only agency providing free dental care through volunteers.</p>
+        <div class="col-lg-6">
+          <h4>SACDC Offers Access to Dental Care</h4>
+          <p>The clinic provides a wide range of dental services for indigent and homeless persons in San Antonio and Bexar County.  SACDC is unique in the area as the only agency providing free dental care through volunteers.</p>
+	  <p>Free Dental Treatment Includes:</p>
+		<ul>
+  		  <li>Exams</li>
+  		  <li>X-rays</li>
+  		  <li>Oral Health Education</li>
+  		  <li>Cleanings</li>
+  		  <li>Fillings</li>
+  		  <li>Extractions and more</li>
+		</ul>
+	  <p>Clients are asked to pay only for discounted material costs for dentures, bridges, crowns, partials and root canals.</p>
 
-<p>Free Dental Treatment Includes:</p>
-<ul>
-  <li>Exams</li>
-  <li>X-rays</li>
-  <li>Oral Health Education</li>
-  <li>Cleanings</li>
-  <li>Fillings</li>
-  <li>Extractions and more</li>
-</ul>
+	  <h4>Out Partner Organizations</h4>
+	  <ul>
+  	    <li><a href="http://howfoundationsa.org/" target="_blank">H.O.W. Foundation</a></li>
+  	    <li><a href="http://teenchallengetx.org/" target="_blank">Teen Challenge</a></li>
+  	    <li><a href="http://www.samm.org" target="_blank">SAMMinistries</a></li>
+  	    <li><a href="http://christianassistanceministry.org/" target="_blank">Christian Assistance Ministry</a></li>
+  	    <li><a href="http://www.salvationarmytexas.org/sanantonio/" target="_blank">The Salvation Army</a></li>
+  	    <li><a href="http://victoryoutreach.org/" target="_blank">Victory Outreach</a></li>
+  	    <li><a href="http://fvps.org/" target="_blank">Battered Woman's Shelter</a></li>
+  	    <li><a href="http://www.alphahome.org/" target="_blank">Alpha Home</a></li>
+  	    <li><a href="http://www.ccaosa.org/" target="_blank">Catholic Charities</a></li>
+	  </ul>
+	  <h4>Additionally we work with:</h4>
+	    <ul>
+  		<li><a href="http://www.wellmedmedicalgroup.com/" target="_blank">Well Med</a></li>
+  		<li><a href="http://www.havenforhope.org/" target="_blank">Haven for Hope</a></li>
+  		<li><a href="http://www.agif-nvop.org/" target="_blank">American GI Forum</a></li>
+	    </ul>
 
-<p>Clients are asked to pay only for discounted material costs for dentures, bridges, crowns, partials and root canals.</p>
+	    <h4>SACDC Annual Reports</h4>
 
-<h3>Haven for Hope Partnership</h3>
-
-<p>In addition to caring for our community's low-income residents, SACDC provides dental care for the Haven for Hope homeless residents.  The clinic, located at the Methodist Healthcare Ministries Healthcare Center at Haven for Hope, includes twelve dental treatment rooms and four oral surgery suites.  SACDC remains a separately incorporated non-profit corporation.</p>
-
-<h3>UTHSCSA Dental School Collaboration</h3>
-<p>The University of Texas Health Science Center-SA Dental School 4th year dental students provide general dental care and Advanced Education in General Dentistry residents provide specialized treatment under the supervision of dental school faculty during a weekly rotation.</p>
-
-<h3>Out Partner Organizations</h3>
-
-<ul>
-  <li><a href="http://howfoundationsa.org/" target="_blank">H.O.W. Foundation</a></li>
-  <li><a href="http://teenchallengetx.org/" target="_blank">Teen Challenge</a></li>
-  <li><a href="http://www.samm.org" target="_blank">SAMMinistries</a></li>
-  <li><a href="http://christianassistanceministry.org/" target="_blank">Christian Assistance Ministry</a></li>
-  <li><a href="http://www.salvationarmytexas.org/sanantonio/" target="_blank">The Salvation Army</a></li>
-  <li><a href="http://victoryoutreach.org/" target="_blank">Victory Outreach</a></li>
-  <li><a href="http://fvps.org/" target="_blank">Battered Woman's Shelter</a></li>
-  <li><a href="http://www.alphahome.org/" target="_blank">Alpha Home</a></li>
-  <li><a href="http://www.ccaosa.org/" target="_blank">Catholic Charities</a></li>
-</ul>
-
-<h3>Additionally we work with:</h3>
-<ul>
-  <li><a href="http://www.wellmedmedicalgroup.com/" target="_blank">Well Med</a></li>
-  <li><a href="http://www.havenforhope.org/" target="_blank">Haven for Hope</a></li>
-  <li><a href="http://www.agif-nvop.org/" target="_blank">American GI Forum</a></li>
-</ul>
-
-<h3>SACDC Annual Reports</h3>
-
-<ul class="list-inline">
-  <li>
-    <% report = @items['/clinic_info/downloads/Annual_Report_2013/'] %>
-      <a href="<%= report.path %>">
-        <img src="<%= report.path(:rep => :thumbnail) %>">
-        2012-2013 Annual Report
-      </a>
-  </li>
-</ul>
+		<ul class="list-inline">
+  		  <li><% report = @items['/clinic_info/downloads/Annual_Report_2013/'] %>
+      <a href="<%= report.path %>"><img src="<%= report.path(:rep => :thumbnail) %>">
+        2012-2013 Annual Report</a>
+  		  </li>
+		</ul>
+        </div>
+      </div>
 
 <p><i>SACDC is a 501(c)3 non-profit organization providing charitable dental care for indigent persons in keeping with Christian ministry</i></p>
