--- a/content/get_involved/index.html
+++ b/content/get_involved/index.html
@@ -6,34 +6,51 @@ tags:
   - sa-cdc
 ---
 
-<h3>Get Involved by Volunteering</h3><br>
+<div class="container">
+<div class="marketing">
 
-<p>As a nonprofit dental health provider, we rely heavily on the hard work of volunteers.  If you would like to donate your time as a volunteer, we are need of help in the following areas:</p>
+  <h1>Get Involved.</h1>
+  <p class="marketing-byline">Want to help the community? We need volunteers.</p>
 
-<ul>
-  <li>Dentists</li>
-  <li>Hygienists</li>
-  <li>Dental Assistants</li>
-  <li>Sterilization Technicians</li>
-  <li>Laboratory Technicians</li>
-</ul>
-Non-Clinical Needs Include:
-<ul>
-  <li>Office Receptionists</li>
-  <li>Telephone answering</li>
-  <li>Dental record maintenance</li>
-  <li>Database entry * Graphic Design</li>
-  <li>Special Events * Fundraising</li>
-</ul>
+  <div class="row-fluid">
+    <div class="span4">
+      <img class="marketing-img" src="/static/imgs/dentist.jpg">
+      <h2>Clinical help needed.</h2>
+      <ul>
+        <li>Dentists</li>
+        <li>Hygienists</li>
+        <li>Dental Assistants</li>
+        <li>Sterilization Technicians</li>
+        <li>Laboratory Technicians</li>
+      </ul>
+    </div>
+    <div class="span4">
+      <img class="marketing-img" src="/static/imgs/receptionist.jpg">
+      <h2>Non-clinical help needed.</h2>
+      <ul>
+        <li>Office Receptionists</li>
+        <li>Telephone answering</li>
+        <li>Dental record maintenance</li>
+        <li>Database entry * Graphic Design</li>
+        <li>Special Events * Fundraising</li>
+      </ul>
+    </div>
+    <div class="span4">
+      <img class="marketing-img" src="/static/imgs/tooth.jpg">
+      <h2>Volunteer.</h2>
+      <ol>
+        <li>Complete the application form below.  Once complete, you can email it, mail it, or bring it into our office.</li>
+        <li>Give us a call at (210) 220-2301.</li>
+        <li>Email us at <a href="mailto:#?Subject=Interested%20in%20Volunteering" target="_top">email@sadc.com</a>.</li>
+        <li>Come by our office at the address in the footer of this page.</li>
+      </ol>
+    </div>
+  </div>
+</div> 
+</div>
+  
 
-<p>To volunteer or to request more information you can:</p>
 
-<ol>
-  <li>Complete the application form below.  Once complete, you can email it, mail it, or bring it into our office.</li>
-  <li>Give us a call at (210) 220-2301.</li>
-  <li>Email us at <a href="mailto:#?Subject=Interested%20in%20Volunteering" target="_top">email@sadc.com</a>.</li>
-  <li>Come by our office at the address in the footer of this page.</li>
-</ol>
 
 <% h = @items['/clinic_info/downloads/Volunteer_Application/'] %>
   <a href="<%= h.path %>"><img src="<%= h.path(:rep => :thumbnail) %>"></a> Volunteer Application
