Continued working beautification.

--- a/content/get_involved/index.html
+++ b/content/get_involved/index.html
@@ -5,45 +5,67 @@ precedence: 1
 tags:
   - sa-cdc
 ---
+<div class="bs-docs-featurette">
+  <div class="container">
+    <h2 class="bs-docs-featurette-title">Get Involved.</h2>
+    <p class="lead">Want to help the community? We need volunteers.</p>
+
+    <hr class="half-rule">
+
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="/static/imgs/dentist.jpg" alt="Sass and Less support" class="img-responsive">
+        <h3>Clinical help needed.</h3>
+        <ul>
+          <li>Dentists</li>
+          <li>Hygienists</li>
+          <li>Dental Assistants</li>
+          <li>Sterilization Technicians</li>
+          <li>Laboratory Technicians</li>
+        </ul>
+      </div>
+      <div class="col-sm-4">
+        <img src="/static/imgs/receptionist.jpg" alt="Responsive across devices" class="img-responsive">
+        <h3>Non-clinical help needed.</h3>
+        <ul>
+          <li>Office Receptionists</li>
+          <li>Telephone answering</li>
+          <li>Dental record maintenance</li>
+          <li>Database entry * Graphic Design</li>
+          <li>Special Events * Fundraising</li>
+        </ul>
+      </div>
+      <div class="col-sm-4">
+        <img src="/static/imgs/tooth.jpg" alt="Components" class="img-responsive">
+        <h2>Volunteer.</h2>
+        <ol>
+          <li>Complete the application form below.  Once complete, you can email it, mail it, or bring it into our office.</li>
+          <li>Give us a call at (210) 220-2301.</li>
+          <li>Email us at <a href="mailto:#?Subject=Interested%20in%20Volunteering" target="_top">email@sadc.com</a>.</li>
+          <li>Come by our office at the address in the footer of this page.</li>
+        </ol>
+      </div>
+    </div>
+
+    <hr class="half-rule">
+
+    <p class="lead">Bootstrap is open source. It's hosted, developed, and maintained on GitHub.</p>
+    <a href="https://github.com/twbs/bootstrap" class="btn btn-outline btn-lg">View the GitHub project</a>
+  </div>
+</div>
 
 <div class="container">
 <div class="marketing">
 
-  <h1>Get Involved.</h1>
-  <p class="marketing-byline">Want to help the community? We need volunteers.</p>
 
   <div class="row-fluid">
     <div class="span4">
-      <img class="marketing-img" src="/static/imgs/dentist.jpg">
-      <h2>Clinical help needed.</h2>
-      <ul>
-        <li>Dentists</li>
-        <li>Hygienists</li>
-        <li>Dental Assistants</li>
-        <li>Sterilization Technicians</li>
-        <li>Laboratory Technicians</li>
-      </ul>
+      <img class="marketing-img" src="">
+      
     </div>
     <div class="span4">
-      <img class="marketing-img" src="/static/imgs/receptionist.jpg">
-      <h2>Non-clinical help needed.</h2>
-      <ul>
-        <li>Office Receptionists</li>
-        <li>Telephone answering</li>
-        <li>Dental record maintenance</li>
-        <li>Database entry * Graphic Design</li>
-        <li>Special Events * Fundraising</li>
-      </ul>
     </div>
     <div class="span4">
-      <img class="marketing-img" src="/static/imgs/tooth.jpg">
-      <h2>Volunteer.</h2>
-      <ol>
-        <li>Complete the application form below.  Once complete, you can email it, mail it, or bring it into our office.</li>
-        <li>Give us a call at (210) 220-2301.</li>
-        <li>Email us at <a href="mailto:#?Subject=Interested%20in%20Volunteering" target="_top">email@sadc.com</a>.</li>
-        <li>Come by our office at the address in the footer of this page.</li>
-      </ol>
     </div>
   </div>
 </div> 
