--- a/content/clinic_info/index.html
+++ b/content/clinic_info/index.html
@@ -5,59 +5,88 @@ precedence: 1
 tags:
   - sa-cdc
 ---
-
+<div class="row">
         <h1 class="text-center">San Antonio Christian Dental Clinic</h1>
         <p class="lead text-center"><i>Since 1986--making a difference in the dental health of those in need</i></p>
+</div>
 
+<div id="show" class="row carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#show" data-slide-to="0" class="active"></li>
+    <li data-target="#show" data-slide-to="1"></li>
+    <li data-target="#show" data-slide-to="2"></li>
+    <li data-target="#show" data-slide-to="3"></li>
+    <li data-target="#show" data-slide-to="4"></li>
+    <li data-target="#show" data-slide-to="5"></li>
+    <li data-target="#show" data-slide-to="6"></li>
+    <li data-target="#show" data-slide-to="7"></li>
+  </ol>
 
-      <div class="row marketing">
-        <div class="col-lg-6">
-          <h4>Clinic Quick Facts</h4>
-            <ul>
-  	      <li>Each year, San Antonio Christian Dental Clinic performs roughly 50,000 procedures, sees nearly 9,000 patients, and provides roughly $3.5 million dollars in free care</li>
-  	      <li>41% of all Bexar County Adults haven't seen a dentist over the past year</li>
-  	      <li>On average, roughly 4.5 million work days are missed each year in the United States because of chronic oral pain</li>
-	    </ul>
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+     <div class="container">
+      <h1 class="text-center">Clinic Quick Facts</h1>
+            <h3 class="text-center">Each year, San Antonio Christian Dental Clinic performs roughly 50,000 procedures, sees nearly 9,000 patients, and provides roughly $3.5 million dollars in free care</br></br>
+  	      41% of all Bexar County Adults haven't seen a dentist over the past year</br></br>
+  	      On average, roughly 4.5 million work days are missed each year in the United States because of chronic oral pain</br></br></h3></br></br>
+     </div>
+    </div>
+    <div class="item">
+     <div class="container">
+      <h1 class="text-center">The need is great</h1>
+            <h3 class="text-center">Access to dental care can be difficult or even impossible for those who do not have the financial resources to go to the dentist.  Minor dental problems become major if treatment is delayed.</h3></br></br>
+     </div>
+    </div>
+    <div class="item">
+     <div class="container">
+      <h1 class="text-center">Why don't they receive care?</h1>
+            <h3 class="text-center">Some are homeless, some are single mothers, others are unemployed, some work yet remain in poverty, others may be recovering from substance abuse, many are elderly or disabled.</h3></br></br>
+     </div>
+    </div>
+    <div class="item">
+     <div class="container">
+      <h1 class="text-center">Acute Need for the Elderly</h1>
+            <h3 class="text-center">Hundreds of low-income elderly and disabled persons live below the poverty level in San Antonio and Bexar County, and most have no dental insurance.  Dental benefits are usually not available for seniors in Medicaid programs.</h3></br></br>
+     </div>
+    </div>
+    <div class="item">
+     <div class="container">
+      <h1 class="text-center">Haven for Hope Partnership</h1>
+            <h3 class="text-center">In addition to caring for our community's low-income residents, SACDC provides dental care for the Haven for Hope homeless residents.  The clinic, located at the Methodist Healthcare Ministries Healthcare Center at Haven for Hope, includes twelve dental treatment rooms and four oral surgery suites.  SACDC remains a separately incorporated non-profit corporation.</h3></br></br>
+     </div>
+    </div>
+    <div class="item">
+     <div class="container">
+      <h1 class="text-center">UTHSCSA Dental School Collaboration</h1>
+            <h3 class="text-center">The University of Texas Health Science Center-SA Dental School 4th year dental students provide general dental care and Advanced Education in General Dentistry residents provide specialized treatment under the supervision of dental school faculty during a weekly rotation.</h3></br></br>
+     </div>
+    </div>
+    <div class="item">
+     <div class="container">
+      <h1 class="text-center">SACDC Offers Access to Dental Care</h1>
+            <h3 class="text-center">The clinic provides a wide range of dental services for indigent and homeless persons in San Antonio and Bexar County.  SACDC is unique in the area as the only agency providing free dental care through volunteers.</h3></br></br>
+     </div>
+    </div>
+  </div>
 
-          <h4>The need is great</h4>
-          <p>Access to dental care can be difficult or even impossible for those who do not have the financial resources to go to the dentist.  Minor dental problems become major if treatment is delayed.</p>
+  <!-- Controls -->
+  <a class="left carousel-control" href="#show" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#show" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
 
-          <h4>Why don't they receive care?</h4>
-          <p>Some are homeless, some are single mothers, others are unemployed, some work yet remain in poverty, others may be recovering from substance abuse, many are elderly or disabled.</p>
-
-	  <h4>Acute Need for the Elderly</h4>
-          <p>Hundreds of low-income elderly and disabled persons live below the poverty level in San Antonio and Bexar County, and most have no dental insurance.  Dental benefits are usually not available for seniors in Medicaid programs.</p>
-
-	  <h4>Haven for Hope Partnership</h4>
-          <p>In addition to caring for our community's low-income residents, SACDC provides dental care for the Haven for Hope homeless residents.  The clinic, located at the Methodist Healthcare Ministries Healthcare Center at Haven for Hope, includes twelve dental treatment rooms and four oral surgery suites.  SACDC remains a separately incorporated non-profit corporation.</p>
-
-	  <h4>UTHSCSA Dental School Collaboration</h4>
-	  <p>The University of Texas Health Science Center-SA Dental School 4th year dental students provide general dental care and Advanced Education in General Dentistry residents provide specialized treatment under the supervision of dental school faculty during a weekly rotation.</p>	
-
-        </div>
-
-        <div class="col-lg-6">
-          <h4>SACDC Offers Access to Dental Care</h4>
-          <p>The clinic provides a wide range of dental services for indigent and homeless persons in San Antonio and Bexar County.  SACDC is unique in the area as the only agency providing free dental care through volunteers.</p>
-	  <p>Free Dental Treatment Includes:</p>
-		<ul>
-  		  <li>Exams</li>
-  		  <li>X-rays</li>
-  		  <li>Oral Health Education</li>
-  		  <li>Cleanings</li>
-  		  <li>Fillings</li>
-  		  <li>Extractions and more</li>
-		</ul>
-	  <p>Clients are asked to pay only for discounted material costs for dentures, bridges, crowns, partials and root canals.</p>
-
-	    <h4>SACDC Annual Reports</h4>
+<div class="row">  
+<h4>SACDC Annual Reports</h4></br>
 
 		<ul class="list-inline">
   		  <li><% report = @items['/clinic_info/downloads/Annual_Report_2013/'] %>
       <a href="<%= report.path %>"><img src="<%= report.path(:rep => :thumbnail) %>"></a> 2012-2013 Annual Report
   		  </li>
-		</ul>
-        </div>
-      </div>
-
+		</ul>    
 <p><i>SACDC is a 501(c)3 non-profit organization providing charitable dental care for indigent persons in keeping with Christian ministry</i></p>
+</div>
