Improved volunteer page.

--- a/content/get_involved/index.html
+++ b/content/get_involved/index.html
@@ -14,7 +14,7 @@ tags:
 
     <div class="row">
       <div class="col-sm-4">
-        <img src="/static/imgs/dentist.jpg" alt="Sass and Less support" class="img-responsive">
+        <img src="/static/imgs/The_official_emblem_of_dentistry_(color).png" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
         <h3>Clinical help needed.</h3>
         <ul>
           <li>Dentists</li>
@@ -25,7 +25,7 @@ tags:
         </ul>
       </div>
       <div class="col-sm-4">
-        <img src="/static/imgs/receptionist.jpg" alt="Responsive across devices" class="img-responsive">
+        <img src="/static/imgs/sheikh_tuhin_Book_Open.png" alt="Responsive across devices" class="bs-docs-featurette-img img-responsive">
         <h3>Non-clinical help needed.</h3>
         <ul>
           <li>Office Receptionists</li>
@@ -36,7 +36,7 @@ tags:
         </ul>
       </div>
       <div class="col-sm-4">
-        <img src="/static/imgs/tooth.jpg" alt="Components" class="img-responsive">
+        <img src="/static/imgs/tooth.png" alt="Components" class="bs-docs-featurette-img img-responsive">
         <h2>Volunteer.</h2>
         <ol>
           <li>Complete the application form below.  Once complete, you can email it, mail it, or bring it into our office.</li>
@@ -48,9 +48,6 @@ tags:
     </div>
 
     <hr class="half-rule">
-
-    <p class="lead">Bootstrap is open source. It's hosted, developed, and maintained on GitHub.</p>
-    <a href="https://github.com/twbs/bootstrap" class="btn btn-outline btn-lg">View the GitHub project</a>
   </div>
 </div>
 
