Incorporated some of John's comments from 22 April 2014:   JB7: This is caused by the carousel controls, we are looking into it.
  JB9: A basic search bar should be easy, the first iteration might not be very robust but we can improve it over time.  Yes a toggle will be needed for spanish/english.

  JB1: The twitter feed rotates through the latest 10 feeds every 15 seconds (both numbers can easily be adjusted).  We can filter based on keywords or even hashtags if needed/wanted.  Color is an easy fix, right now it is using our default link color scheme.

   JB10:  Added text.

--- a/content/seek_care/index.html
+++ b/content/seek_care/index.html
@@ -6,7 +6,9 @@ tags:
   - sa-cdc
 ---
 <h2>Seeking Dental Care</h2>
-
+<div>
+SACDC was established in 1986 to provide free dental care for low income and homeless Bexar County adults. Before you schedule a visit, please fill out the form on this page in order to determine eligibility. If eligible, please call 210-220-2300 to schedule a visit.
+</div>
 <form role="form" id="my-form">
   <div class="form-group">
     <div class="input-group">
