Added spaceholders for mission statements

--- a/content/clinic_info/partners.html
+++ b/content/clinic_info/partners.html
@@ -11,11 +11,13 @@ tags:
         <div class="col-md-4">
 
 <p class="text-center">
-<a href="http://teenchallengetx.org/" target="_blank"><img src="/static/imgs/Teen_Challenge.jpg" height="100"></a></br></br>
+<a href="http://teenchallengetx.org/" target="_blank"><img src="/static/imgs/Teen_Challenge.png" height="100"></a></br><b>Teen Challenge mission statement</b></br></br>
 
-<a href="http://www.samm.org" target="_blank"><img src="/static/imgs/SAMM.png" height="60"></a></br></br>
+<a href="http://www.samm.org" target="_blank"><img src="/static/imgs/SAMM.png" height="60"></a></br><b>SAMM mission statement</b></br></br>
 
-<a href="http://victoryoutreach.org/" target="_blank"><img src="/static/imgs/Victory.jpg" height="200"></a></br><b>Victory Outreach International</b></br></br>
+<a href="http://victoryoutreach.org/" target="_blank"><img src="/static/imgs/Victory.jpg" height="200"></a></br><b>Victory Outreach International mission statement</b></br></br>
+
+<a href="http://www.havenforhope.org/" target="_blank"><img src="/static/imgs/Haven.png" height="80"></a></br><b>Haven for Hope mission statement</b></br></br>
 
 </p>
 
@@ -25,11 +27,13 @@ tags:
 
 <p class="text-center">
 
-<a href="http://www.ccaosa.org/" target="_blank"><img src="/static/imgs/CCAOSA.png" height="80"></a></br></br>
+<a href="http://www.ccaosa.org/" target="_blank"><img src="/static/imgs/CCAOSA.png" height="80"></a></br><b>CCAOSA mission statement</b></br></br>
 
-<a href="http://christianassistanceministry.org/" target="_blank"><img src="/static/imgs/CAM.gif" height="100"></a></br></br>
+<a href="http://christianassistanceministry.org/" target="_blank"><img src="/static/imgs/CAM.gif" height="100"></a></br><b>CAM mission statement</b></br></br>
 
-<a href="http://fvps.org/" target="_blank"><img src="/static/imgs/fvps.jpg" height="180"></a></br></br>
+<a href="http://fvps.org/" target="_blank"><img src="/static/imgs/fvps.jpg" height="180"></a></br><b>FVPS mission statement</b></br></br>
+
+<a href="http://www.agif-nvop.org/" target="_blank"><img src="/static/imgs/NVOP.png" height="80"></a></br><b>AGIF-NVOP mission statement</b></br></br>
 
 </p>
 
@@ -38,46 +42,15 @@ tags:
 
 <p class="text-center">
 
-<a href="http://www.salvationarmytexas.org/sanantonio/" target="_blank"><img src="/static/imgs/Salvation_Army.jpg" height="100"></a></br></br>
+<a href="http://www.salvationarmytexas.org/sanantonio/" target="_blank"><img src="/static/imgs/Salvation_Army.jpg" height="100"></a></br><b>Salvation Army mission statement</b></br></br>
 
-<a href="http://www.alphahome.org/" target="_blank"><img src="/static/imgs/alpha_home.jpg" height="100"></a></br></br>
+<a href="http://www.alphahome.org/" target="_blank"><img src="/static/imgs/alpha_home.jpg" height="100"></a></br><b>Alpha Home mission statement</b></br></br>
 
-<a href="http://howfoundationsa.org/" target="_blank"><img src="/static/imgs/HOW.png" height="60"></a></br></br>
+<a href="http://howfoundationsa.org/" target="_blank"><img src="/static/imgs/HOW.png" height="60"></a></br><b>HOW mission statement</b></br></br>
 
-</p>
-
-	</div>
-    </div>
-
-<h1 class="text-center">Additionally, we work with:</h1>
-
-<div class="row">
-        <div class="col-md-4">
-
-<p class="text-center">
-<a href="http://www.havenforhope.org/" target="_blank"><img src="/static/imgs/Haven.png" height="80"></a></br></br>
-
-</p>
-
-	</div>
-
-        <div class="col-md-4">
-
-<p class="text-center">
-
-<a href="http://www.agif-nvop.org/" target="_blank"><img src="/static/imgs/NVOP.png" height="80"></a></br></br>
-
-</p>
-
-	</div>
-	<div class="col-md-4">
-
-<p class="text-center">
-
-<a href="http://www.wellmedmedicalgroup.com/" target="_blank"><img src="/static/imgs/wellmed.jpg" height="80"></a></br></br>
+<a href="http://www.wellmedmedicalgroup.com/" target="_blank"><img src="/static/imgs/wellmed.jpg" height="80"></a></br><b>WELLMED mission statement</b></br></br>
 
 </p>
 
 	</div>
     </div>
-
